--- a/app/test/fixtures/events.yml
+++ b/app/test/fixtures/events.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
+  expr_id: 1
+  user_id: 1
+  teacher_id: 1
 
 two:
-  name: MyString
+  expr_id: 1
+  user_id: 1
+  teacher_id: 1
